--- a/index.html
+++ b/index.html
@@ -184,15 +184,16 @@
     <p>Designer con formazione artistica e accademica in Interior e Product Design. Appassionata di visualizzazione 3D e progettazione creativa, unisco precisione tecnica e sensibilità estetica per realizzare progetti funzionali e visivamente accattivanti.</p>
   </section>
 
-  <section>
-    <h2>Esperienze lavorative</h2>
-    <h3>3D Artist — LuceAtelier (2023 – Presente)</h3>
-    <ul>
-      <li>Modellazione e rendering 3D per progetti di interior design e architettura.</li>
-      <li>Utilizzo di 3ds Max e V-Ray come motore di rendering.</li>
-      <li>Profilo Instagram dello studio: <a href="https://www.instagram.com/_luce.atelier/" target="_blank">@_luce.atelier</a></li>
-    </ul>
-  </section>
+<section>
+  <h2>Esperienze lavorative</h2>
+  <h3>3D Artist — LuceAtelier (2023 – Presente)</h3>
+  <ul>
+    <li>Modellazione e rendering 3D per progetti di interior design e architettura.</li>
+    <li>Utilizzo di 3ds Max e V-Ray come motore di rendering.</li>
+    <li>Profilo Instagram dello studio: <a href="https://www.instagram.com/_luce.atelier/" target="_blank">@_luce.atelier</a></li>
+    <li>Sito web dello studio: <a href="https://www.luceatelier.com/" target="_blank">www.luceatelier.com</a></li>
+  </ul>
+</section>
 
   <section>
     <h2>Istruzione</h2>
