--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
       border-top: 1px solid #eee;
     }
 
+    /* --- YouTube icon aggiornata --- */
     .youtube-icon {
       display: flex;
       justify-content: center;
@@ -140,23 +141,29 @@
     }
 
     .youtube-link {
-      width: 45px;
-      height: 45px;
-      background-color: #a6bfa4;
-      border-radius: 10px;
+      width: 35px;
+      height: 35px;
+      background-color: transparent;
+      border: 2px solid #a6bfa4; /* verde salvia */
+      border-radius: 8px;
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: background-color 0.3s;
+      transition: all 0.3s ease;
     }
 
     .youtube-link:hover {
-      background-color: #90a58e;
+      background-color: #a6bfa4;
     }
 
     .youtube-link svg {
-      width: 22px;
-      height: 22px;
+      width: 18px;
+      height: 18px;
+      fill: #a6bfa4;
+      transition: fill 0.3s;
+    }
+
+    .youtube-link:hover svg {
       fill: white;
     }
   </style>
@@ -184,16 +191,16 @@
     <p>Designer con formazione artistica e accademica in Interior e Product Design. Appassionata di visualizzazione 3D e progettazione creativa, unisco precisione tecnica e sensibilità estetica per realizzare progetti funzionali e visivamente accattivanti.</p>
   </section>
 
-<section>
-  <h2>Esperienze lavorative</h2>
-  <h3>3D Artist — LuceAtelier (2023 – Presente)</h3>
-  <ul>
-    <li>Modellazione e rendering 3D per progetti di interior design e architettura.</li>
-    <li>Utilizzo di 3ds Max e V-Ray come motore di rendering.</li>
-    <li>Profilo Instagram dello studio: <a href="https://www.instagram.com/_luce.atelier/" target="_blank">@_luce.atelier</a></li>
-    <li>Sito web dello studio: <a href="https://www.luceatelier.com/" target="_blank">www.luceatelier.com</a></li>
-  </ul>
-</section>
+  <section>
+    <h2>Esperienze lavorative</h2>
+    <h3>3D Artist — LuceAtelier (2023 – Presente)</h3>
+    <ul>
+      <li>Modellazione e rendering 3D per progetti di interior design e architettura.</li>
+      <li>Utilizzo di 3ds Max e V-Ray come motore di rendering.</li>
+      <li>Profilo Instagram dello studio: <a href="https://www.instagram.com/_luce.atelier/" target="_blank">@_luce.atelier</a></li>
+      <li>Sito web dello studio: <a href="https://www.luceatelier.com/" target="_blank">www.luceatelier.com</a></li>
+    </ul>
+  </section>
 
   <section>
     <h2>Istruzione</h2>
