--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       border-top: 1px solid #eee;
     }
 
-    /* --- YouTube icon aggiornata --- */
+    /* --- Bottone YouTube verde salvia piccolo --- */
     .youtube-icon {
       display: flex;
       justify-content: center;
@@ -141,30 +141,31 @@
     }
 
     .youtube-link {
-      width: 35px;
-      height: 35px;
+      width: 18px;
+      height: 18px;
       background-color: transparent;
-      border: 2px solid #a6bfa4; /* verde salvia */
-      border-radius: 8px;
+      border: 1.5px solid #a6bfa4;
+      border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
       transition: all 0.3s ease;
+      overflow: hidden;
+    }
+
+    .youtube-link img {
+      width: 9px;
+      height: 9px;
+      filter: invert(81%) sepia(6%) saturate(391%) hue-rotate(82deg) brightness(88%) contrast(87%);
+      transition: filter 0.3s ease;
     }
 
     .youtube-link:hover {
       background-color: #a6bfa4;
     }
 
-    .youtube-link svg {
-      width: 18px;
-      height: 18px;
-      fill: #a6bfa4;
-      transition: fill 0.3s;
-    }
-
-    .youtube-link:hover svg {
-      fill: white;
+    .youtube-link:hover img {
+      filter: brightness(0) invert(1);
     }
   </style>
 </head>
@@ -177,11 +178,11 @@
       📞 339 33133592 · 📧 <a href="mailto:lucrezia.dori99@gmail.com">lucrezia.dori99@gmail.com</a><br>
       📍 Cavriglia (AR) · 19/02/1999
     </p>
+
+    <!-- Bottone YouTube verde salvia piccolo -->
     <div class="youtube-icon">
       <a class="youtube-link" href="https://www.youtube.com/@lucreziadori4895" target="_blank" aria-label="YouTube">
-        <svg viewBox="0 0 24 24">
-          <path d="M10 15l5.19-3L10 9v6zm11-3c0-2.5-.3-4.2-.7-5.4-.4-1.2-1.3-2.1-2.5-2.5C16.6 3 12 3 12 3s-4.6 0-5.8.1c-1.2.4-2.1 1.3-2.5 2.5C3.3 7.8 3 9.5 3 12s.3 4.2.7 5.4c.4 1.2 1.3 2.1 2.5 2.5C7.4 21 12 21 12 21s4.6 0 5.8-.1c1.2-.4 2.1-1.3 2.5-2.5.4-1.2.7-2.9.7-5.4z"/>
-        </svg>
+        <img src="youtube-logo-youtube-icon-transparent-free-png.webp" alt="YouTube">
       </a>
     </div>
   </header>
